--- a/page1/index.html
+++ b/page1/index.html
@@ -411,7 +411,7 @@
                                           <div class="box">
                                             <div class="circulo-img">
                                               <img
-                                                src="./images/youtube.png"
+                                                src="./images/icons/1-enfasis.png"
                                                 alt="Imagen 6"
                                               />
                                             </div>
@@ -423,7 +423,7 @@
                                           <div class="box">
                                             <div class="circulo-img">
                                               <img
-                                                src="./images/youtube.png"
+                                                src="./images/icons/2-programa.png"
                                                 alt="Imagen 6"
                                               />
                                             </div>
@@ -435,7 +435,7 @@
                                           <div class="box">
                                             <div class="circulo-img">
                                               <img
-                                                src="./images/youtube.png"
+                                                src="./images/icons/3-logros.png"
                                                 alt="Imagen 6"
                                               />
                                             </div>
@@ -446,18 +446,18 @@
                                           <div class="box">
                                             <div class="circulo-img">
                                               <img
-                                                src="./images/youtube.png"
+                                                src="./images/icons/4-grupos.png"
                                                 alt="Imagen 6"
                                               />
                                             </div>
                                             <h4>
-                                              Grupos Homogéneos y reducidos
+                                              Grupos homogéneos y reducidos
                                             </h4>
                                           </div>
                                           <div class="box">
                                             <div class="circulo-img">
                                               <img
-                                                src="./images/youtube.png"
+                                                src="./images/icons/5-dinamica.png"
                                                 alt="Imagen 6"
                                               />
                                             </div>
@@ -469,11 +469,11 @@
                                           <div class="box">
                                             <div class="circulo-img">
                                               <img
-                                                src="./images/youtube.png"
+                                                src="./images/icons/6-docente.png"
                                                 alt="Imagen 6"
                                               />
                                             </div>
-                                            <h4>Docentes Especializados</h4>
+                                            <h4>Docentes especializados</h4>
                                           </div>
                                         </div>
                                       </a>
@@ -539,7 +539,6 @@
                                         style="
                                           color: #606060;
                                           font-size: 12pt;
-                                          font-family: Neo Sans Pro;
                                           word-spacing: 10px;
                                         "
                                       >
