--- a/page3/index.html
+++ b/page3/index.html
@@ -427,31 +427,32 @@
                                           <div class="box">
                                             <div class="circulo-img">
                                               <img
-                                                src="./images/youtube.png"
+                                                src="./images/icons/1-enfasis.png"
                                                 alt="Imagen 6"
                                               />
                                             </div>
                                             <h4>
                                               Énfasis en el desarrollo de la
-                                              expresion oral
+                                              expresión oral en el contexto
+                                              empresarial
                                             </h4>
                                           </div>
                                           <div class="box">
                                             <div class="circulo-img">
                                               <img
-                                                src="./images/youtube.png"
+                                                src="./images/icons/2-casos.png"
                                                 alt="Imagen 6"
                                               />
                                             </div>
                                             <h4>
-                                              Programas diferenciados para
-                                              niños, adolescentes y adultos
+                                              Desarrollo de casos de estudio en
+                                              cada ciclo
                                             </h4>
                                           </div>
                                           <div class="box">
                                             <div class="circulo-img">
                                               <img
-                                                src="./images/youtube.png"
+                                                src="./images/icons/3-logros.png"
                                                 alt="Imagen 6"
                                               />
                                             </div>
@@ -462,34 +463,33 @@
                                           <div class="box">
                                             <div class="circulo-img">
                                               <img
-                                                src="./images/youtube.png"
+                                                src="./images/icons/4-grupos.png"
                                                 alt="Imagen 6"
                                               />
                                             </div>
                                             <h4>
-                                              Grupos Homogéneos y reducidos
+                                              Grupos homogéneos y reducidos
                                             </h4>
                                           </div>
                                           <div class="box">
                                             <div class="circulo-img">
                                               <img
-                                                src="./images/youtube.png"
+                                                src="./images/icons/5-dinamica.png"
                                                 alt="Imagen 6"
                                               />
                                             </div>
                                             <h4>
-                                              Dinamica grupal que garantiza el
-                                              aprendizaje
+                                              Plataforma de refuerzo InEnglish
                                             </h4>
                                           </div>
                                           <div class="box">
                                             <div class="circulo-img">
                                               <img
-                                                src="./images/youtube.png"
+                                                src="./images/icons/6-docente.png"
                                                 alt="Imagen 6"
                                               />
                                             </div>
-                                            <h4>Docentes Especializados</h4>
+                                            <h4>Docentes especializados</h4>
                                           </div>
                                         </div>
                                       </a>
@@ -569,11 +569,14 @@
                               </table>
                               <div class="container">
                                 <div class="row">
-                                  <a class="title-curse" style="margin: auto">
+                                  <a
+                                    class="title-curse title-curse-2"
+                                    style="margin: auto"
+                                  >
                                     <!-- <img class="img-title" src="images/title-1.png" alt="title" /> -->
                                     <spam
-                                      >ASESORÍA PEDAGÓGICA SIN COSTO
-                                      ADICIONAL</spam
+                                      >*REQUIERE NIVEL PRE-INTERMEDIO DE
+                                      INGLÉS</spam
                                     >
                                   </a>
                                 </div>
