--- a/page4/index.html
+++ b/page4/index.html
@@ -318,7 +318,7 @@
                                           <div class="box">
                                             <div class="circulo-img">
                                               <img
-                                                src="./images/youtube.png"
+                                                src="./images/icons/1-enfasis.png"
                                                 alt="Imagen 6"
                                               />
                                             </div>
@@ -330,19 +330,18 @@
                                           <div class="box">
                                             <div class="circulo-img">
                                               <img
-                                                src="./images/youtube.png"
+                                                src="./images/icons/2-inmersion.png"
                                                 alt="Imagen 6"
                                               />
                                             </div>
                                             <h4>
-                                              Programas diferenciados para
-                                              niños, adolescentes y adultos
+                                              100% de inmersión en el idioma
                                             </h4>
                                           </div>
                                           <div class="box">
                                             <div class="circulo-img">
                                               <img
-                                                src="./images/youtube.png"
+                                                src="./images/icons/3-logros.png"
                                                 alt="Imagen 6"
                                               />
                                             </div>
@@ -353,34 +352,38 @@
                                           <div class="box">
                                             <div class="circulo-img">
                                               <img
-                                                src="./images/youtube.png"
+                                                src="./images/icons/4-contexto.png"
                                                 alt="Imagen 6"
                                               />
                                             </div>
                                             <h4>
-                                              Grupos Homogéneos y reducidos
+                                              Contextualiza la clase en
+                                              situaciones reales
                                             </h4>
                                           </div>
                                           <div class="box">
                                             <div class="circulo-img">
                                               <img
-                                                src="./images/youtube.png"
+                                                src="./images/icons/5-dinamica.png"
                                                 alt="Imagen 6"
                                               />
                                             </div>
                                             <h4>
-                                              Dinamica grupal que garantiza el
+                                              Dinámica grupal que garantiza el
                                               aprendizaje
                                             </h4>
                                           </div>
                                           <div class="box">
                                             <div class="circulo-img">
                                               <img
-                                                src="./images/youtube.png"
+                                                src="./images/icons/6-cultura.png"
                                                 alt="Imagen 6"
                                               />
                                             </div>
-                                            <h4>Docentes Especializados</h4>
+                                            <h4>
+                                              Enseñanza de la cultura, para un
+                                              aprendizaje sencillo y rápido
+                                            </h4>
                                           </div>
                                         </div>
                                       </a>
