--- a/page5/index.html
+++ b/page5/index.html
@@ -415,7 +415,7 @@
                                           <div class="box">
                                             <div class="circulo-img">
                                               <img
-                                                src="./images/youtube.png"
+                                                src="./images/icons/1-enfasis.png"
                                                 alt="Imagen 6"
                                               />
                                             </div>
@@ -427,19 +427,16 @@
                                           <div class="box">
                                             <div class="circulo-img">
                                               <img
-                                                src="./images/youtube.png"
+                                                src="./images/icons/2-docente.png"
                                                 alt="Imagen 6"
                                               />
                                             </div>
-                                            <h4>
-                                              Programas diferenciados para
-                                              niños, adolescentes y adultos
-                                            </h4>
+                                            <h4>Docentes nativos</h4>
                                           </div>
                                           <div class="box">
                                             <div class="circulo-img">
                                               <img
-                                                src="./images/youtube.png"
+                                                src="./images/icons/3-logros.png"
                                                 alt="Imagen 6"
                                               />
                                             </div>
@@ -450,34 +447,35 @@
                                           <div class="box">
                                             <div class="circulo-img">
                                               <img
-                                                src="./images/youtube.png"
+                                                src="./images/icons/4-dinamica.png"
                                                 alt="Imagen 6"
                                               />
                                             </div>
                                             <h4>
-                                              Grupos Homogéneos y reducidos
-                                            </h4>
-                                          </div>
-                                          <div class="box">
-                                            <div class="circulo-img">
-                                              <img
-                                                src="./images/youtube.png"
-                                                alt="Imagen 6"
-                                              />
-                                            </div>
-                                            <h4>
-                                              Dinamica grupal que garantiza el
+                                              Dinámica grupal que garantiza el
                                               aprendizaje
                                             </h4>
                                           </div>
                                           <div class="box">
                                             <div class="circulo-img">
                                               <img
-                                                src="./images/youtube.png"
+                                                src="./images/icons/5-idioma.png"
                                                 alt="Imagen 6"
                                               />
                                             </div>
-                                            <h4>Docentes Especializados</h4>
+                                            <h4>
+                                              100% inmersión en el idioma y
+                                              cultura brasileña
+                                            </h4>
+                                          </div>
+                                          <div class="box">
+                                            <div class="circulo-img">
+                                              <img
+                                                src="./images/icons/6-frecuencia.png"
+                                                alt="Imagen 6"
+                                              />
+                                            </div>
+                                            <h4>Programa de rápido avance</h4>
                                           </div>
                                         </div>
                                       </a>
