--- a/page6/index.html
+++ b/page6/index.html
@@ -426,7 +426,7 @@
                                           <div class="box">
                                             <div class="circulo-img">
                                               <img
-                                                src="./images/youtube.png"
+                                                src="./images/icons/1-enfasis.png"
                                                 alt="Imagen 6"
                                               />
                                             </div>
@@ -438,19 +438,19 @@
                                           <div class="box">
                                             <div class="circulo-img">
                                               <img
-                                                src="./images/youtube.png"
+                                                src="./images/icons/2-cultura.png"
                                                 alt="Imagen 6"
                                               />
                                             </div>
                                             <h4>
-                                              Programas diferenciados para
-                                              niños, adolescentes y adultos
+                                              Metodología lúdica, vivencial,
+                                              divertida y práctica
                                             </h4>
                                           </div>
                                           <div class="box">
                                             <div class="circulo-img">
                                               <img
-                                                src="./images/youtube.png"
+                                                src="./images/icons/3-logros.png"
                                                 alt="Imagen 6"
                                               />
                                             </div>
@@ -461,34 +461,36 @@
                                           <div class="box">
                                             <div class="circulo-img">
                                               <img
-                                                src="./images/youtube.png"
+                                                src="./images/icons/4-grupos.png"
                                                 alt="Imagen 6"
                                               />
                                             </div>
                                             <h4>
-                                              Grupos Homogéneos y reducidos
+                                              Grupos homogéneos y reducidos
                                             </h4>
                                           </div>
                                           <div class="box">
                                             <div class="circulo-img">
                                               <img
-                                                src="./images/youtube.png"
+                                                src="./images/icons/5-inmersion.png"
                                                 alt="Imagen 6"
                                               />
                                             </div>
                                             <h4>
-                                              Dinamica grupal que garantiza el
-                                              aprendizaje
+                                              100% de inmersión en el idioma
                                             </h4>
                                           </div>
                                           <div class="box">
                                             <div class="circulo-img">
                                               <img
-                                                src="./images/youtube.png"
+                                                src="./images/icons/6-dinamica.png"
                                                 alt="Imagen 6"
                                               />
                                             </div>
-                                            <h4>Docentes Especializados</h4>
+                                            <h4>
+                                              Recrea situaciones cotidianas y
+                                              vivenciales en otros países
+                                            </h4>
                                           </div>
                                         </div>
                                       </a>
