--- a/page2/index.html
+++ b/page2/index.html
@@ -427,31 +427,30 @@
                                           <div class="box">
                                             <div class="circulo-img">
                                               <img
-                                                src="./images/youtube.png"
+                                                src="./images/icons/1-enfasis.png"
                                                 alt="Imagen 6"
                                               />
                                             </div>
                                             <h4>
                                               Énfasis en el desarrollo de la
-                                              expresion oral
+                                              expresión oral
                                             </h4>
                                           </div>
                                           <div class="box">
                                             <div class="circulo-img">
                                               <img
-                                                src="./images/youtube.png"
+                                                src="./images/icons/2-frecuencia.png"
                                                 alt="Imagen 6"
                                               />
                                             </div>
                                             <h4>
-                                              Programas diferenciados para
-                                              niños, adolescentes y adultos
+                                              Variedad de horarios y frecuencias
                                             </h4>
                                           </div>
                                           <div class="box">
                                             <div class="circulo-img">
                                               <img
-                                                src="./images/youtube.png"
+                                                src="./images/icons/3-logros.png"
                                                 alt="Imagen 6"
                                               />
                                             </div>
@@ -462,34 +461,36 @@
                                           <div class="box">
                                             <div class="circulo-img">
                                               <img
-                                                src="./images/youtube.png"
+                                                src="./images/icons/4-grupos.png"
                                                 alt="Imagen 6"
                                               />
                                             </div>
                                             <h4>
-                                              Grupos Homogéneos y reducidos
+                                              Grupos homogéneos y reducidos
                                             </h4>
                                           </div>
                                           <div class="box">
                                             <div class="circulo-img">
                                               <img
-                                                src="./images/youtube.png"
+                                                src="./images/icons/5-dinamica.png"
                                                 alt="Imagen 6"
                                               />
                                             </div>
                                             <h4>
-                                              Dinamica grupal que garantiza el
-                                              aprendizaje
+                                              Plataforma de refuerzo InEnglish
                                             </h4>
                                           </div>
                                           <div class="box">
                                             <div class="circulo-img">
                                               <img
-                                                src="./images/youtube.png"
+                                                src="./images/icons/6-docente.png"
                                                 alt="Imagen 6"
                                               />
                                             </div>
-                                            <h4>Docentes Especializados</h4>
+                                            <h4>
+                                              Asesoría pedagógica personalizada
+                                              sin costo
+                                            </h4>
                                           </div>
                                         </div>
                                       </a>
