parte final de pag2

--- a/page2/index.html
+++ b/page2/index.html
@@ -511,7 +511,7 @@
         </tbody>
       </table>
       <table
-        id="espacio1"
+        id="espacio2"
         class="es-content"
         cellspacing="0"
         cellpadding="0"
@@ -528,54 +528,194 @@
                 bgcolor="#f5f5f5"
                 align="center"
               >
-                <tbody>
-                  <tr>
-                    <td
-                      class="esd-structure"
-                      esd-general-paddings-checked="false"
-                      align="left"
-                    >
-                      <table width="100%" cellspacing="0" cellpadding="0">
-                        <tbody>
-                          <tr>
-                            <td
-                              class="esd-container-frame"
-                              valign="top"
-                              align="center"
-                            >
-                              <table
-                                width="100%"
-                                cellspacing="0"
-                                cellpadding="0"
-                              >
-                                <tbody>
-                                  <tr>
-                                    <td class="esd-block-image" align="center">
-                                      <a
-                                        href="#"
-                                        id="container-img"
-                                        style="pointer-events: none"
-                                        onclick="return false;"
-                                      >
-                                        <!-- nuevo -->
-                                        <img
-                                          id="informacion"
-                                          class="adapt-img info2"
-                                          src="images/informacion-3.png"
-                                          width="800"
-                                        />
-                                      </a>
-                                    </td>
-                                  </tr>
-                                </tbody>
-                              </table>
-                            </td>
-                          </tr>
-                        </tbody>
-                      </table>
-                    </td>
-                  </tr>
-                </tbody>
+                <div class="container">
+                  <div class="row">
+                    <a class="title-curse title-frecuencias">
+                      <!-- <img class="img-title" src="images/title.png" alt="title" /> -->
+                      <spam>FRECUENCIAS</spam>
+                    </a>
+                  </div>
+                </div>
+                <br />
+                <a
+                  href="#"
+                  id="container-img"
+                  style="pointer-events: none"
+                  onclick="return false;"
+                >
+                  <!-- nuevo -->
+                  <!-- <img
+                    id="informacion"
+                    class="adapt-img info2"
+                    src="images/informacion-3.png"
+                    width="800"
+                  /> -->
+                  <div id="frecuencias" class="container">
+                    <div class="row titulo">
+                      <div class="col-3"></div>
+                      <div class="col-6"><span> HORARIO </span></div>
+                      <div class="col-3"><span> DURACIÓN </span></div>
+                    </div>
+                    <div class="row">
+                      <div class="col-3 modalidad">
+                        <spam> Fast Track</spam>
+                      </div>
+                      <div class="col-6 bg-pri">
+                        <spam> lunes a viernes</spam>
+                        <spam>|</spam>
+                        <spam> 1h 30min por día</spam>
+                      </div>
+                      <div class="col-3 bg-pri duracion">
+                        <spam>2 meses</spam>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-3 modalidad"><spam>Regular</spam></div>
+                      <div class="col-6 bg-sec">
+                        <spam> sabados</spam>
+                        <spam>|</spam>
+                        <spam> 4h 15min por día</spam>
+                      </div>
+                      <div class="col-3 bg-sec duracion">
+                        <spam>3 meses</spam>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-3 modalidad">
+                        <spam>Superintensivo</spam>
+                      </div>
+                      <div class="col-6 bg-pri">
+                        <spam> lunes a viernes</spam>
+                        <spam>|</spam>
+                        <spam> 3h por día</spam>
+                      </div>
+                      <div class="col-3 bg-pri duracion">
+                        <spam>1 meses</spam>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-3 modalidad">
+                        <spam>Intensivo</spam>
+                      </div>
+                      <div class="col-6 bg-sec">
+                        <spam> lunes y miercoles</spam>
+                        <spam>|</spam>
+                        <spam> 3h por día</spam>
+                      </div>
+                      <div class="col-3 bg-sec duracion">
+                        <spam>2 meses</spam>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-3 modalidad">
+                        <spam>Intensivo</spam>
+                      </div>
+                      <div class="col-6 bg-sec">
+                        <spam> martes y jueves</spam>
+                        <spam>|</spam>
+                        <spam> 3h por día</spam>
+                      </div>
+                      <div class="col-3 bg-sec duracion">
+                        <spam>2 meses</spam>
+                      </div>
+                    </div>
+                  </div>
+                </a>
+                <div class="container">
+                  <div class="row">
+                    <a class="title-curse title-frecuencias">
+                      <!-- <img class="img-title" src="images/title.png" alt="title" /> -->
+                      <spam>NIVELES</spam>
+                    </a>
+                  </div>
+                </div>
+                <br />
+                <a
+                  href="#"
+                  id="container-img"
+                  style="pointer-events: none"
+                  onclick="return false;"
+                >
+                  <!-- nuevo -->
+                  <!-- <img
+                    id="informacion"
+                    class="adapt-img info2"
+                    src="images/informacion-3.png"
+                    width="800"
+                  /> -->
+                  <div id="frecuencias" class="container">
+                    <div class="row titulo-niveles">
+                      <div class="col-12">
+                        <span class="title-span">
+                          <span>12 ciclos</span> de
+                          <span>51 horas</span> cronológicas cada uno
+                        </span>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-6 nivel">
+                        <spam> Elemental </spam>
+                      </div>
+                      <div class="col-2 cronologia">
+                        <spam> CL1</spam>
+                      </div>
+                      <div class="col-2 cronologia">
+                        <spam>CL2</spam>
+                      </div>
+                      <div class="col-2 cronologia">
+                        <spam> CL3</spam>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-6 nivel">
+                        <spam> Pre Intermedio </spam>
+                      </div>
+                      <div class="col-2 cronologia">
+                        <spam> CL4</spam>
+                      </div>
+                      <div class="col-2 cronologia">
+                        <spam>CL5</spam>
+                      </div>
+                      <div class="col-2 cronologia">
+                        <spam> CL6</spam>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-6 nivel">
+                        <spam> Intermedio </spam>
+                      </div>
+                      <div class="col-2 cronologia">
+                        <spam> CL7</spam>
+                      </div>
+                      <div class="col-2 cronologia">
+                        <spam>CL8</spam>
+                      </div>
+                      <div class="col-2 cronologia">
+                        <spam> CL9</spam>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-6 nivel">
+                        <spam> Avanzado </spam>
+                      </div>
+                      <div class="col-2 cronologia">
+                        <spam> CL10</spam>
+                      </div>
+                      <div class="col-2 cronologia">
+                        <spam>CL11</spam>
+                      </div>
+                      <div class="col-2 cronologia">
+                        <spam> CL12</spam>
+                      </div>
+                    </div>
+
+                    <div class="col-12">
+                      <span class="cronologia-pie">
+                        *1 hora cronológica = 60 minutos
+                      </span>
+                    </div>
+                  </div>
+                </a>
               </table>
             </td>
           </tr>
