page2 - frec-niv

--- a/page2/index.html
+++ b/page2/index.html
@@ -562,8 +562,8 @@
                       </div>
                       <div class="col-6 bg-pri">
                         <spam> lunes a viernes</spam>
-                        <spam>|</spam>
-                        <spam> 1h 30min por día</spam>
+                        <!-- <spam>|</spam> -->
+                        <spam><spam>| </spam> 1h 30min por día</spam>
                       </div>
                       <div class="col-3 bg-pri duracion">
                         <spam>2 meses</spam>
@@ -573,8 +573,8 @@
                       <div class="col-3 modalidad"><spam>Regular</spam></div>
                       <div class="col-6 bg-sec">
                         <spam> sabados</spam>
-                        <spam>|</spam>
-                        <spam> 4h 15min por día</spam>
+                        <!-- <spam>|</spam> -->
+                        <spam> <spam>| </spam>4h 15min por día</spam>
                       </div>
                       <div class="col-3 bg-sec duracion">
                         <spam>3 meses</spam>
@@ -586,8 +586,8 @@
                       </div>
                       <div class="col-6 bg-pri">
                         <spam> lunes a viernes</spam>
-                        <spam>|</spam>
-                        <spam> 3h por día</spam>
+                        <!-- <spam>|</spam> -->
+                        <spam> <spam>| </spam> 3 horas por día</spam>
                       </div>
                       <div class="col-3 bg-pri duracion">
                         <spam>1 meses</spam>
@@ -599,8 +599,8 @@
                       </div>
                       <div class="col-6 bg-sec">
                         <spam> lunes y miercoles</spam>
-                        <spam>|</spam>
-                        <spam> 3h por día</spam>
+                        <!-- <spam>|</spam> -->
+                        <spam><spam>|</spam> 3 horas por día</spam>
                       </div>
                       <div class="col-3 bg-sec duracion">
                         <spam>2 meses</spam>
@@ -612,8 +612,8 @@
                       </div>
                       <div class="col-6 bg-sec">
                         <spam> martes y jueves</spam>
-                        <spam>|</spam>
-                        <spam> 3h por día</spam>
+                        <!--  <spam>|</spam> -->
+                        <spam> <spam>|</spam> 3 horas por día</spam>
                       </div>
                       <div class="col-3 bg-sec duracion">
                         <spam>2 meses</spam>
