--- a/page3/index.html
+++ b/page3/index.html
@@ -509,7 +509,7 @@
           </tr>
         </tbody>
       </table>
-      <table
+      <!-- <table
         id="espacio1"
         class="es-content"
         cellspacing="0"
@@ -573,7 +573,7 @@
                                     class="title-curse title-curse-2"
                                     style="margin: auto"
                                   >
-                                    <!-- <img class="img-title" src="images/title-1.png" alt="title" /> -->
+                                  
                                     <spam
                                       >*REQUIERE NIVEL PRE-INTERMEDIO DE
                                       INGLÉS</spam
@@ -589,6 +589,202 @@
                     </td>
                   </tr>
                 </tbody>
+              </table>
+            </td>
+          </tr>
+        </tbody>
+      </table> -->
+      <table
+        id="espacio2"
+        class="es-content"
+        cellspacing="0"
+        cellpadding="0"
+        align="center"
+        style="background-color: #f5f5f5"
+      >
+        <tbody>
+          <tr>
+            <td class="esd-stripe" align="center">
+              <table
+                class="es-content-body"
+                cellspacing="0"
+                cellpadding="0"
+                bgcolor="#f5f5f5"
+                align="center"
+              >
+                <div class="container">
+                  <div class="row">
+                    <a class="title-curse title-frecuencias">
+                      <!-- <img class="img-title" src="images/title.png" alt="title" /> -->
+                      <spam>FRECUENCIAS</spam>
+                    </a>
+                  </div>
+                </div>
+                <br />
+                <a
+                  href="#"
+                  id="container-img"
+                  style="pointer-events: none"
+                  onclick="return false;"
+                >
+                  <!-- nuevo -->
+                  <!-- <img
+                    id="informacion"
+                    class="adapt-img info2"
+                    src="images/informacion-3.png"
+                    width="800"
+                  /> -->
+                  <div id="frecuencias" class="container">
+                    <div class="row titulo">
+                      <!-- <div class="col-3"></div> -->
+                      <div class="col-6"><span> HORARIO </span></div>
+                      <div class="col-3"><span> DURACIÓN </span></div>
+                    </div>
+
+                    <div class="row">
+                      <!-- <div class="col-3 modalidad">
+                        <spam>Intensivo</spam>
+                      </div> -->
+                      <div class="col-6 bg-sec">
+                        <spam> lunes y miércoles</spam>
+                        <!-- <spam>|</spam> -->
+                        <spam><spam>|</spam> 2h 30 min por día</spam>
+                      </div>
+                      <div class="col-3 bg-sec duracion">
+                        <spam>2 meses</spam>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <!-- <div class="col-3 modalidad">
+                        <spam>Intensivo</spam>
+                      </div> -->
+                      <div class="col-6 bg-sec">
+                        <spam> martes y jueves</spam>
+                        <!--  <spam>|</spam> -->
+                        <spam> <spam>|</spam> 2h 30 min por día</spam>
+                      </div>
+                      <div class="col-3 bg-sec duracion">
+                        <spam>2 meses</spam>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <!-- <div class="col-3 modalidad">
+                        <spam>Superintensivo</spam>
+                      </div> -->
+                      <div class="col-6 bg-pri">
+                        <spam> lunes a jueves</spam>
+                        <!-- <spam>|</spam> -->
+                        <spam> <spam>| </spam> 1h 30 min por día</spam>
+                      </div>
+                      <div class="col-3 bg-pri duracion">
+                        <spam>1 meses</spam>
+                      </div>
+                    </div>
+                  </div>
+                </a>
+                <div class="container">
+                  <div class="row">
+                    <a class="title-curse title-frecuencias">
+                      <!-- <img class="img-title" src="images/title.png" alt="title" /> -->
+                      <spam>NIVELES</spam>
+                    </a>
+                  </div>
+                </div>
+                <br />
+                <a
+                  href="#"
+                  id="container-img"
+                  style="pointer-events: none"
+                  onclick="return false;"
+                >
+                  <!-- nuevo -->
+                  <!-- <img
+                    id="informacion"
+                    class="adapt-img info2"
+                    src="images/informacion-3.png"
+                    width="800"
+                  /> -->
+                  <div id="frecuencias" class="container">
+                    <div class="row titulo-niveles">
+                      <div class="col-12">
+                        <span class="title-span">
+                          <span>9 ciclos</span> de
+                          <span>36 horas</span> cronológicas cada uno
+                        </span>
+                      </div>
+                    </div>
+                    <!-- <div class="row">
+                      <div class="col-6 nivel">
+                        <spam> Elemental </spam>
+                      </div>
+                      <div class="col-2 cronologia">
+                        <spam> CL1</spam>
+                      </div>
+                      <div class="col-2 cronologia">
+                        <spam>CL2</spam>
+                      </div>
+                      <div class="col-2 cronologia">
+                        <spam> CL3</spam>
+                      </div>
+                    </div> -->
+                    <div class="row">
+                      <div class="col-6 nivel">
+                        <spam> Pre Intermedio </spam>
+                      </div>
+                      <div class="col-2 cronologia">
+                        <spam> EFB1</spam>
+                      </div>
+                      <div class="col-2 cronologia">
+                        <spam>EFB2</spam>
+                      </div>
+                      <div class="col-2 cronologia">
+                        <spam> EFB3</spam>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-6 nivel">
+                        <spam> Intermedio </spam>
+                      </div>
+                      <div class="col-2 cronologia">
+                        <spam> EFB4</spam>
+                      </div>
+                      <div class="col-2 cronologia">
+                        <spam>EFB5</spam>
+                      </div>
+                      <div class="col-2 cronologia">
+                        <spam> EFB6</spam>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-6 nivel">
+                        <spam> Intermedio Superior </spam>
+                      </div>
+                      <div class="col-2 cronologia">
+                        <spam> EFB7</spam>
+                      </div>
+                      <div class="col-2 cronologia">
+                        <spam>EFB8</spam>
+                      </div>
+                      <div class="col-2 cronologia">
+                        <spam> EFB9</spam>
+                      </div>
+                    </div>
+
+                    <div class="col-12">
+                      <span class="cronologia-pie">
+                        *1 hora cronológica = 60 minutos
+                      </span>
+                    </div>
+                  </div>
+                </a>
+                <div class="container">
+                  <div class="row">
+                    <a class="title-curse title-curse-2" style="margin: auto">
+                      <spam>*REQUIERE NIVEL PRE-INTERMEDIO DE INGLÉS</spam>
+                    </a>
+                  </div>
+                </div>
+                <br />
               </table>
             </td>
           </tr>
